--- a/Bard/View.xib
+++ b/Bard/View.xib
@@ -12,6 +12,8 @@
                 <outlet property="backButton" destination="mnK-9n-OIn" id="jvE-eh-y3u"/>
                 <outlet property="categoryHeader" destination="yXf-Vk-oPY" id="A5i-CJ-yCe"/>
                 <outlet property="categoryLabel" destination="g9M-jz-emq" id="FXe-fa-Ydh"/>
+                <outlet property="categoryTableViewHeaderBottom" destination="iv7-jz-mqz" id="vjg-TA-fB1"/>
+                <outlet property="categoryTableViewHeaderTop" destination="kpC-FZ-Dpc" id="GvL-hc-ag4"/>
                 <outlet property="chooseQuoteView" destination="S6X-cn-8I0" id="gzJ-nI-kdM"/>
                 <outlet property="expandCategoryButton" destination="MZg-ph-cbY" id="0kN-j6-deN"/>
                 <outlet property="nameEntryButton" destination="8p6-Gv-7WO" id="JNI-nl-Ym6"/>
@@ -94,51 +96,6 @@
                     <variation key="default">
                         <mask key="constraints">
                             <exclude reference="yDf-pg-kQ9"/>
-                        </mask>
-                    </variation>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kpi-0C-ci4" userLabel="Text Keyboard View" customClass="TextKeyboardView" customModule="Bard" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="26" width="320" height="174"/>
-                    <subviews>
-                        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rTx-Mv-mme" userLabel="Row 1">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        </view>
-                        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TVQ-bV-okK" userLabel="Row 2">
-                            <rect key="frame" x="0.0" y="43" width="320" height="43"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        </view>
-                        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q6S-JF-h7U" userLabel="Row 3">
-                            <rect key="frame" x="0.0" y="86" width="320" height="43"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        </view>
-                        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IJa-mM-82E" userLabel="Row 4">
-                            <rect key="frame" x="0.0" y="129" width="320" height="43"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        </view>
-                    </subviews>
-                    <constraints>
-                        <constraint firstItem="TVQ-bV-okK" firstAttribute="top" secondItem="rTx-Mv-mme" secondAttribute="bottom" id="1fL-DE-6jO"/>
-                        <constraint firstAttribute="trailing" secondItem="Q6S-JF-h7U" secondAttribute="trailing" id="3cd-OP-Iqt"/>
-                        <constraint firstItem="rTx-Mv-mme" firstAttribute="height" secondItem="Kpi-0C-ci4" secondAttribute="height" multiplier="0.25" id="7eD-6G-SKq"/>
-                        <constraint firstItem="IJa-mM-82E" firstAttribute="leading" secondItem="Kpi-0C-ci4" secondAttribute="leading" id="8IH-9a-B7a"/>
-                        <constraint firstItem="TVQ-bV-okK" firstAttribute="leading" secondItem="Kpi-0C-ci4" secondAttribute="leading" id="NJ7-HG-Lvk"/>
-                        <constraint firstItem="TVQ-bV-okK" firstAttribute="height" secondItem="rTx-Mv-mme" secondAttribute="height" id="Nwn-Jy-Mn2"/>
-                        <constraint firstItem="Q6S-JF-h7U" firstAttribute="height" secondItem="TVQ-bV-okK" secondAttribute="height" id="PE6-Cd-eGf"/>
-                        <constraint firstItem="IJa-mM-82E" firstAttribute="top" secondItem="Q6S-JF-h7U" secondAttribute="bottom" id="RBY-in-VI6"/>
-                        <constraint firstAttribute="trailing" secondItem="rTx-Mv-mme" secondAttribute="trailing" id="UCp-X5-eYK"/>
-                        <constraint firstAttribute="trailing" secondItem="TVQ-bV-okK" secondAttribute="trailing" id="aQg-R6-m7z"/>
-                        <constraint firstItem="IJa-mM-82E" firstAttribute="top" secondItem="TVQ-bV-okK" secondAttribute="bottom" id="k89-PL-2Zn"/>
-                        <constraint firstAttribute="trailing" secondItem="IJa-mM-82E" secondAttribute="trailing" id="lA6-tL-rl7"/>
-                        <constraint firstItem="rTx-Mv-mme" firstAttribute="leading" secondItem="Kpi-0C-ci4" secondAttribute="leading" id="nbg-xT-Mip"/>
-                        <constraint firstItem="Q6S-JF-h7U" firstAttribute="leading" secondItem="Kpi-0C-ci4" secondAttribute="leading" id="qu2-yK-Kw6"/>
-                        <constraint firstItem="rTx-Mv-mme" firstAttribute="top" secondItem="Kpi-0C-ci4" secondAttribute="top" id="rjh-q4-RMG"/>
-                        <constraint firstItem="Q6S-JF-h7U" firstAttribute="top" secondItem="TVQ-bV-okK" secondAttribute="bottom" id="swT-Ib-vXF"/>
-                        <constraint firstItem="IJa-mM-82E" firstAttribute="height" secondItem="Q6S-JF-h7U" secondAttribute="height" id="umT-oW-Msg"/>
-                    </constraints>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="k89-PL-2Zn"/>
                         </mask>
                     </variation>
                 </view>
@@ -250,6 +207,51 @@
                     <rect key="frame" x="0.0" y="200" width="320" height="0.0"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kpi-0C-ci4" userLabel="Text Keyboard View" customClass="TextKeyboardView" customModule="Bard" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="26" width="320" height="174"/>
+                    <subviews>
+                        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rTx-Mv-mme" userLabel="Row 1">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TVQ-bV-okK" userLabel="Row 2">
+                            <rect key="frame" x="0.0" y="43" width="320" height="43"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q6S-JF-h7U" userLabel="Row 3">
+                            <rect key="frame" x="0.0" y="86" width="320" height="43"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IJa-mM-82E" userLabel="Row 4">
+                            <rect key="frame" x="0.0" y="129" width="320" height="43"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="TVQ-bV-okK" firstAttribute="top" secondItem="rTx-Mv-mme" secondAttribute="bottom" id="1fL-DE-6jO"/>
+                        <constraint firstAttribute="trailing" secondItem="Q6S-JF-h7U" secondAttribute="trailing" id="3cd-OP-Iqt"/>
+                        <constraint firstItem="rTx-Mv-mme" firstAttribute="height" secondItem="Kpi-0C-ci4" secondAttribute="height" multiplier="0.25" id="7eD-6G-SKq"/>
+                        <constraint firstItem="IJa-mM-82E" firstAttribute="leading" secondItem="Kpi-0C-ci4" secondAttribute="leading" id="8IH-9a-B7a"/>
+                        <constraint firstItem="TVQ-bV-okK" firstAttribute="leading" secondItem="Kpi-0C-ci4" secondAttribute="leading" id="NJ7-HG-Lvk"/>
+                        <constraint firstItem="TVQ-bV-okK" firstAttribute="height" secondItem="rTx-Mv-mme" secondAttribute="height" id="Nwn-Jy-Mn2"/>
+                        <constraint firstItem="Q6S-JF-h7U" firstAttribute="height" secondItem="TVQ-bV-okK" secondAttribute="height" id="PE6-Cd-eGf"/>
+                        <constraint firstItem="IJa-mM-82E" firstAttribute="top" secondItem="Q6S-JF-h7U" secondAttribute="bottom" id="RBY-in-VI6"/>
+                        <constraint firstAttribute="trailing" secondItem="rTx-Mv-mme" secondAttribute="trailing" id="UCp-X5-eYK"/>
+                        <constraint firstAttribute="trailing" secondItem="TVQ-bV-okK" secondAttribute="trailing" id="aQg-R6-m7z"/>
+                        <constraint firstItem="IJa-mM-82E" firstAttribute="top" secondItem="TVQ-bV-okK" secondAttribute="bottom" id="k89-PL-2Zn"/>
+                        <constraint firstAttribute="trailing" secondItem="IJa-mM-82E" secondAttribute="trailing" id="lA6-tL-rl7"/>
+                        <constraint firstItem="rTx-Mv-mme" firstAttribute="leading" secondItem="Kpi-0C-ci4" secondAttribute="leading" id="nbg-xT-Mip"/>
+                        <constraint firstItem="Q6S-JF-h7U" firstAttribute="leading" secondItem="Kpi-0C-ci4" secondAttribute="leading" id="qu2-yK-Kw6"/>
+                        <constraint firstItem="rTx-Mv-mme" firstAttribute="top" secondItem="Kpi-0C-ci4" secondAttribute="top" id="rjh-q4-RMG"/>
+                        <constraint firstItem="Q6S-JF-h7U" firstAttribute="top" secondItem="TVQ-bV-okK" secondAttribute="bottom" id="swT-Ib-vXF"/>
+                        <constraint firstItem="IJa-mM-82E" firstAttribute="height" secondItem="Q6S-JF-h7U" secondAttribute="height" id="umT-oW-Msg"/>
+                    </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="k89-PL-2Zn"/>
+                        </mask>
+                    </variation>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -275,8 +277,8 @@
                 <constraint firstItem="1Dy-eB-g35" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ddo-he-pTZ"/>
                 <constraint firstAttribute="trailing" secondItem="thq-F2-UuR" secondAttribute="trailing" id="gxL-n7-gBz"/>
                 <constraint firstItem="cCg-gG-mVt" firstAttribute="top" secondItem="Npz-By-jUS" secondAttribute="bottom" id="hEu-Hx-Xk3"/>
-                <constraint firstAttribute="bottom" secondItem="yXf-Vk-oPY" secondAttribute="bottom" id="iv7-jz-mqz"/>
-                <constraint firstItem="yXf-Vk-oPY" firstAttribute="top" secondItem="S6X-cn-8I0" secondAttribute="bottom" id="kpC-FZ-Dpc"/>
+                <constraint firstAttribute="bottom" secondItem="yXf-Vk-oPY" secondAttribute="bottom" identifier="Header Bottom" id="iv7-jz-mqz"/>
+                <constraint firstItem="yXf-Vk-oPY" firstAttribute="top" secondItem="S6X-cn-8I0" secondAttribute="bottom" identifier="Category Header Top (to Quote Bottom)" id="kpC-FZ-Dpc"/>
                 <constraint firstItem="S6X-cn-8I0" firstAttribute="top" secondItem="cCg-gG-mVt" secondAttribute="bottom" id="mLh-PF-XHC"/>
                 <constraint firstItem="S6X-cn-8I0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="moq-IS-c6k"/>
                 <constraint firstItem="Npz-By-jUS" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="n45-lS-YTG"/>
