--- a/ContainingAppForBard-3/Base.lproj/LaunchScreen.xib
+++ b/ContainingAppForBard-3/Base.lproj/LaunchScreen.xib
@@ -11,19 +11,19 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Roast" translatesAutoresizingMaskIntoConstraints="NO" id="9oG-0B-C2q">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trump-white" translatesAutoresizingMaskIntoConstraints="NO" id="9oG-0B-C2q">
                     <rect key="frame" x="60" y="90" width="200" height="200"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="7IO-d7-9hN"/>
                         <constraint firstAttribute="height" constant="200" id="lCB-hC-0Be"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Roast" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9n-ui-zrZ">
-                    <rect key="frame" x="60" y="270" width="200" height="70"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TrumpText" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9n-ui-zrZ">
+                    <rect key="frame" x="-40" y="265" width="400" height="51"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="200" id="Obi-dw-yzb"/>
+                        <constraint firstAttribute="width" constant="400" id="Obi-dw-yzb"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="60"/>
+                    <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="44"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -33,14 +33,14 @@
                 <constraint firstAttribute="centerY" secondItem="9oG-0B-C2q" secondAttribute="centerY" constant="50" id="7Ts-0Z-Lez"/>
                 <constraint firstAttribute="centerX" secondItem="9oG-0B-C2q" secondAttribute="centerX" id="BWM-SP-hwv"/>
                 <constraint firstAttribute="centerX" secondItem="N9n-ui-zrZ" secondAttribute="centerX" id="IC9-Vz-D1h"/>
-                <constraint firstItem="N9n-ui-zrZ" firstAttribute="top" secondItem="9oG-0B-C2q" secondAttribute="bottom" constant="-20" id="T3y-ot-zt3"/>
+                <constraint firstItem="N9n-ui-zrZ" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="50" id="u7x-kv-KTQ"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
     <resources>
-        <image name="Roast" width="1200" height="1200"/>
+        <image name="trump-white" width="2083" height="2083"/>
     </resources>
 </document>
