--- a/ContainingAppForBard-3/Base.lproj/LaunchScreen.xib
+++ b/ContainingAppForBard-3/Base.lproj/LaunchScreen.xib
@@ -18,7 +18,7 @@
                         <constraint firstAttribute="height" constant="200" id="lCB-hC-0Be"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TrumpText" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9n-ui-zrZ">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trumped" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9n-ui-zrZ">
                     <rect key="frame" x="-40" y="265" width="400" height="51"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="400" id="Obi-dw-yzb"/>
